# assignment-cloud-engineer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  assignment.md  docker-compose.deps.yml  docker-compose.yml  duplicate-repository.md  main.py  pyproject.toml
todoozie/: app.py  db.py
todoozie/controllers/: task.py  user.py
todoozie/models/: __init__.py  persistence.py
todoozie/models/api/: task.py  user.py
todoozie/services/: auth.py  task.py  user.py
